# SYNDICATE_BOTNET

./: README.md  pyproject.toml
.github/workflows/: publish.yml
SYNDICATE_BOTNET/: main.py  run.py
