[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SYNDICATE-BOTSNET" # Nama buat 'pip install'
version = "1.1.2"
description = "Premium Auto Bot for MoneyBux"
readme = "README.md"
authors = [{ name = "lutfiix77" }]
requires-python = ">=3.12"
dependencies = [
    "telethon",
    "requests",
    "beautifulsoup4"
]

[project.scripts]
SYNDICATE-BOTSNET = "SYNDICATE_BOTNET.main:start" # Nama buat jalanin bot

[tool.setuptools]
packages = ["SYNDICATE_BOTNET"]

[tool.setuptools.package-data]
SYNDICATE_BOTNET = ["*.so"]
